# syntect-workers

./: Cargo.toml  README.md  wrangler.toml
src/: lib.rs
worker/: worker.js
