[package]
name = "syntect-workers"
version = "0.1.0"
authors = ["Menci"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.77"

syntect = { version = "4.6", default-features = false, features = ["default-fancy"]}

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
